Bug 15527 - [BUG] NULL pointer dereference in i915_gem_object_save_bit_17_swizzle
Summary: [BUG] NULL pointer dereference in i915_gem_object_save_bit_17_swizzle
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_video-dri-intel@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks: 14885
  Show dependency tree
 
Reported: 2010-03-12 17:49 UTC by Maciej Rutecki
Modified: 2010-04-08 22:56 UTC (History)
5 users (show)

See Also:
Kernel Version: 2.6.33
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Maciej Rutecki 2010-03-12 17:49:41 UTC
Subject    : [BUG] NULL pointer dereference in i915_gem_object_save_bit_17_swizzle
Submitter  : "Justin Madru" <jdm64@gawab.com>
Date       : 2010-03-04 9:00
Message-ID : 20100304090047.23689.qmail@info88.gawab.com
References : http://marc.info/?l=linux-kernel&m=126769366716380&w=2

This entry is being used for tracking a regression from 2.6.32.  Please don't
close it until the problem is fixed in the mainline.

Caused by:

commit 280b713b5b0fd84cf2469098aee88acbb5de859c
Author: Eric Anholt <eric@anholt.net>
Date:   Thu Mar 12 16:56:27 2009 -0700

    drm/i915: Allow tiling of objects with bit 17 swizzling by the CPU.

    Signed-off-by: Eric Anholt <eric@anholt.net>

First-Bad-Commit : 280b713b5b0fd84cf2469098aee88acbb5de859c
Comment 1 Alexey Starikovskiy 2010-03-26 21:55:32 UTC
Patch is available here: https://patchwork.kernel.org/patch/85355/
Comment 2 Rafael J. Wysocki 2010-04-08 22:56:15 UTC
Fixed by commit 1f2b10131f83f7caa67bf1273cec126b4283015d .

Note You need to log in before you can comment on or make changes to this bug.